@@ -1,5 +1,8 @@
 0.2.0: (Future)
+Features:
  - Support for gamepad axes, e.g. analog sticks or triggers
+Bugfixes:
+ - Qt: Fix issue with set frame sizes being the wrong height
 
 0.1.0: (2014-12-13)
  - Initial release
